--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,11 +3,16 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
+		"noImplicitAny": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"lib": ["es2020", "DOM"],
+		"moduleResolution": "node",
+		"module": "es2020",
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"target": "es2020"
 	}
 }
