--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
+
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"lib": ["es2020", "DOM"],
@@ -13,5 +14,6 @@
 		"sourceMap": true,
 		"strict": true,
 		"target": "es2020"
-	}
+	},
+	"files": ["app.d.js"]
 }
