--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.26.0",
-		"eslint": "^8.51.0",
+		"@sveltejs/kit": "^1.27.2",
+		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.34.0",
+		"eslint-plugin-svelte": "^2.34.1",
+		"mdsvex": "^0.11.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.69.4",
-		"svelte": "^4.2.1",
+		"sass": "^1.69.5",
+		"svelte": "^4.2.2",
 		"svelte-check": "^3.5.2",
 		"vite": "^4.5.0"
 	},
