--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"svelte-check": "^3.5.2",
 		"vite": "^4.5.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"rehype-raw": "^7.0.0",
+		"remark-gfm": "^4.0.0"
+	}
 }
