--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^1.27.3",
 		"eslint": "^8.53.0",
 		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-markdown": "^3.0.1",
 		"eslint-plugin-svelte": "^2.34.1",
 		"mdsvex": "^0.11.0",
 		"prettier": "^2.8.8",
