--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,7 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"lib": ["es2020", "DOM"],
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"module": "es2020",
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
