--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-markdown": "^3.0.1",
@@ -24,7 +24,8 @@
 		"sass": "^1.69.5",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
-		"vite": "^5.0.0"
+		"svelte-markdoc-preprocess": "^1.1.4",
+		"vite": "^5.0.10"
 	},
 	"type": "module"
 }
