--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,7 @@
 
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"lib": ["es2020", "DOM"],
+		"lib": ["es2020", "DOM", "DOM.Iterable"],
 		"moduleResolution": "bundler",
 		"module": "es2020",
 		"resolveJsonModule": true,
