removes console log statements update flake nix file add perma link tags fix manifest not found icon files make the cheep layout unscrollable

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,24 +1,25 @@
 {
-	"name": "tcmhoang's blog",
-	"short_name": "tcmhoang",
+	"name": "Conrad Hoang's blog",
+	"id": "personal application",
+	"short_name": "TCMH",
 	"icons": [
 		{
-			"src": "/icons/favicon.ico",
+			"src": "icons/favicon.ico",
 			"sizes": "32x32",
 			"type": "image/x-icon"
 		},
 		{
-			"src": "/icons/android-chrome-192x192.png",
+			"src": "icons/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/icons/android-chrome-512x512.png",
+			"src": "icons/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
 	],
-	"start_url": ".",
+	"start_url": "/",
 	"theme_color": "#df8e1d",
 	"background_color": "#eff1f5",
 	"display": "standalone"
