try to fix manifest

--- a/.github/workflows/github-deploy.yaml
+++ b/.github/workflows/github-deploy.yaml
@@ -17,13 +17,14 @@ jobs:
           version: 8
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm i
 
       - name: build
         env:
           BASE_PATH: '/${{ github.event.repository.name }}'
         run: |
-          pnpm run build
+          pnpm build
+          touch build/.nojekyll
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v2
