--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,17 +4,29 @@
 	"short_name": "TCMH",
 	"icons": [
 		{
-			"src": "icons/favicon.ico",
+			"src": "/icons/favicon.ico",
 			"sizes": "48x48",
 			"type": "image/x-icon"
 		},
 		{
-			"src": "icons/android-chrome-192x192.png",
+			"src": "/icons/android-chrome-192x192.png",
+			"sizes": "192x192",
+			"type": "image/png",
+			"purpose": "maskable"
+		},
+		{
+			"src": "/icons/android-chrome-512x512.png",
+			"sizes": "512x512",
+			"type": "image/png",
+			"purpose": "maskable"
+		},
+		{
+			"src": "/icons/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "icons/android-chrome-512x512.png",
+			"src": "/icons/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
@@ -26,14 +38,14 @@
 	"display": "standalone",
 	"screenshots": [
 		{
-			"src": "screenshots/1.jpg",
+			"src": "/screenshots/1.jpg",
 			"sizes": "779x1038",
 			"type": "image/jpg",
 			"form_factor": "wide",
 			"label": "Conrad's Hoang feed"
 		},
 		{
-			"src": "screenshots/1.jpg",
+			"src": "/screenshots/1.jpg",
 			"sizes": "779x1038",
 			"type": "image/jpg",
 			"label": "Conrad's Hoang feed"
