--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,7 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"lib": ["es2020", "DOM", "DOM.Iterable"],
+		"lib": ["esnext", "DOM", "DOM.Iterable", "WebWorker"],
 		"types": ["vite/client"],
 		"moduleResolution": "bundler",
 		"module": "es2020",
