--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-markdown": "^3.0.1",
 		"eslint-plugin-svelte": "^2.35.1",
+		"html-minifier-terser": "^7.2.0",
+		"postcss": "^8.4.33",
+		"postcss-combine-duplicated-selectors": "^10.0.3",
+		"postcss-preset-env": "^9.3.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"sass": "^1.69.7",
