--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"sass": "^1.69.7",
+		"super-sitemap": "^0.14.13",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.3",
 		"svelte-markdoc-preprocess": "^1.2.0",
