move imgs to another dir

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,24 +9,24 @@
 			"type": "image/x-icon"
 		},
 		{
-			"src": "/icons/android-chrome-192x192.png",
+			"src": "/images/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png",
 			"purpose": "maskable"
 		},
 		{
-			"src": "/icons/android-chrome-512x512.png",
+			"src": "/images/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png",
 			"purpose": "maskable"
 		},
 		{
-			"src": "/icons/android-chrome-192x192.png",
+			"src": "/images/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/icons/android-chrome-512x512.png",
+			"src": "/images/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
@@ -38,14 +38,14 @@
 	"display": "standalone",
 	"screenshots": [
 		{
-			"src": "/screenshots/1.jpg",
+			"src": "/images/screenshot.jpg",
 			"sizes": "779x1038",
 			"type": "image/jpg",
 			"form_factor": "wide",
 			"label": "Conrad's Hoang feed"
 		},
 		{
-			"src": "/screenshots/1.jpg",
+			"src": "/images/screenshot.jpg",
 			"sizes": "779x1038",
 			"type": "image/jpg",
 			"label": "Conrad's Hoang feed"
