--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@catppuccin/highlightjs": "^0.1.4",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/enhanced-img": "^0.1.8",
 		"@sveltejs/kit": "^2.5.0",
@@ -20,6 +21,7 @@
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-markdown": "^3.0.1",
 		"eslint-plugin-svelte": "^2.35.1",
+		"highlight.js": "^11.9.0",
 		"html-minifier-terser": "^7.2.0",
 		"postcss": "^8.4.34",
 		"postcss-combine-duplicated-selectors": "^10.0.3",
