--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,7 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"lib": ["es2022", "DOM", "DOM.Iterable", "WebWorker"],
+		"lib": ["DOM", "DOM.Iterable", "WebWorker", "ESNext.Array", "DOM", "ESNext"],
 		"types": ["vite/client"],
 		"moduleResolution": "bundler",
 		"module": "es2022",
