--- a/.github/workflows/cloudflare-deploy.yaml
+++ b/.github/workflows/cloudflare-deploy.yaml
@@ -11,10 +11,15 @@ jobs:
       - name: 📚 Git Checkout
         uses: actions/checkout@v3
 
-      - name: ⚙️ Install pnpm
-        uses: pnpm/action-setup@v2
+      - name: ⚙️ Install pnde 
+        uses: actions/setup-node@v4
         with:
-          version: 8
+          node-version: '21.x'
+
+      - name: ✨ enable corepack with pnpm
+        run: |
+          corepack enable
+          corepack use pnpm@8.x
 
       - name: 📦 Install dependencies
         run: pnpm i
