--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
 		"super-sitemap": "^0.14.14",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.4",
+		"svelte-eslint-parser": "^0.33.1",
 		"svelte-markdoc-preprocess": "^1.2.0",
 		"vite": "^5.1.4"
 	},
 	"type": "module",
+	"engines": {
+		"node": ">=21.5"
+	},
 	"packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2"
 }
