--- a/.github/workflows/cloudflare-deploy.yaml
+++ b/.github/workflows/cloudflare-deploy.yaml
@@ -7,6 +7,9 @@ jobs:
   build_site:
     name: Deploy site
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
     steps:
       - name: 📚 Git Checkout
         uses: actions/checkout@v3
@@ -39,5 +42,3 @@ jobs:
           directory: 'build/'
           gitHubToken: ${{ secrets.GH_TOKEN }}
           wranglerVersion: '3'
-
-
