tweak here and there rm the cloud pages deploy use the latest version of wrangler to deploy the web

--- a/.github/workflows/cloudflare-deploy.yaml
+++ b/.github/workflows/cloudflare-deploy.yaml
@@ -24,18 +24,43 @@ jobs:
           corepack enable
           corepack use pnpm@8.x
 
+      - name: Get pnpm store directory
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        id: cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: 📦 Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         run: pnpm i
 
       - name: 👷 Build
+        run: pnpm build
+
+      - name: Install Wrangler CLI
+        run: npm install --global wrangler@latest
+
+      - name: Get commit info
         run: |
-          pnpm build
+          echo "COMMIT_HASH=$(git log -1 --pretty=format:"%H" | tail)" >> $GITHUB_ENV
+          echo "COMMIT_MESSAGE=$(git show -s --format=%s  | tail)" >> $GITHUB_ENV
 
       - name: 📢 Publish
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ vars.CLOUDFLARE_ACC_ID }}
-          projectName: ${{ vars.CLOUDFLARE_PRJ_ID }}
-          directory: 'build/'
-          gitHubToken: ${{ secrets.GH_TOKEN }}
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ vars.CLOUDFLARE_ACC_ID }}
+          CLOUDFLARE_PRJ_NAME: ${{ vars.CLOUDFLARE_PRJ_ID }}
+        run: |
+          wrangler pages deploy build \
+            --project-name="${{env.CLOUDFLARE_PRJ_NAME}}" \
+            --branch=main \
+            --commit-hash="${{env.COMMIT_HASH}}" \
+            --commit-message="${{env.COMMIT_MESSAGE}}" \
+            --commit-dirty=false
