--- a/.github/workflows/cloudflare-deploy.yaml
+++ b/.github/workflows/cloudflare-deploy.yaml
@@ -24,12 +24,12 @@ jobs:
           corepack enable
           corepack use pnpm@8.x
 
-      - name: Get pnpm store directory
+      - name: 🔍 Get pnpm store directory
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
       - uses: actions/cache@v4
-        name: Setup pnpm cache
+        name: 🔮 Setup pnpm cache
         id: cache
         with:
           path: ${{ env.STORE_PATH }}
@@ -44,10 +44,10 @@ jobs:
       - name: 👷 Build
         run: pnpm build
 
-      - name: Install Wrangler CLI
+      - name: 🌤️ Install Wrangler CLI
         run: npm install --global wrangler@latest
 
-      - name: Get commit info
+      - name: 🪄 Get commit info
         run: |
           echo "COMMIT_HASH=$(git log -1 --pretty=format:"%H" | tail)" >> $GITHUB_ENV
           echo "COMMIT_MESSAGE=$(git show -s --format=%s  | tail)" >> $GITHUB_ENV
