--- a/.github/workflows/cloudflare-deploy.yaml
+++ b/.github/workflows/cloudflare-deploy.yaml
@@ -1,7 +1,10 @@
 name: Deploy to Cloudflare
+
 on:
-  push:
-    branches: 'main'
+  workflow_dispatch
+  # on:
+  # push:
+  # branches: 'main'
 
 jobs:
   build_site:
