--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@catppuccin/highlightjs": "^0.1.4",
+		"@fullhuman/postcss-purgecss": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/enhanced-img": "^0.1.9",
 		"@sveltejs/kit": "^2.5.5",
@@ -25,16 +26,16 @@
 		"html-minifier-terser": "^7.2.0",
 		"postcss": "^8.4.38",
 		"postcss-combine-duplicated-selectors": "^10.0.3",
-		"postcss-preset-env": "^9.5.2",
+		"postcss-preset-env": "^9.5.4",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.72.0",
+		"sass": "^1.74.1",
 		"super-sitemap": "^0.14.14",
 		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.8",
+		"svelte-check": "^3.6.9",
 		"svelte-eslint-parser": "^0.33.1",
 		"svelte-markdoc-preprocess": "^1.2.1",
-		"vite": "^5.2.7"
+		"vite": "^5.2.8"
 	},
 	"type": "module",
 	"engines": {
