--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "tcmhoang",
 	"version": "0.0.1",
+	"type": "module",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -10,6 +11,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"peerDependencies": {
+		"postcss": "^8.4.38"
 	},
 	"devDependencies": {
 		"@catppuccin/highlightjs": "^0.1.4",
@@ -24,7 +28,6 @@
 		"eslint-plugin-svelte": "^2.38.0",
 		"highlight.js": "^11.9.0",
 		"html-minifier-terser": "^7.2.0",
-		"postcss": "^8.4.38",
 		"postcss-combine-duplicated-selectors": "^10.0.3",
 		"postcss-preset-env": "^9.5.9",
 		"prettier": "^2.8.8",
@@ -37,7 +40,6 @@
 		"svelte-markdoc-preprocess": "^1.2.1",
 		"vite": "^5.2.10"
 	},
-	"type": "module",
 	"engines": {
 		"node": ">=21.5"
 	},
