--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,12 +7,15 @@
 		"forceConsistentCasingInFileNames": true,
 		"lib": ["DOM", "DOM.Iterable", "WebWorker", "ESNext.Array", "DOM", "ESNext"],
 		"types": ["vite/client"],
-		"moduleResolution": "bundler",
-		"module": "es2022",
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"resolveJsonModule": true,
+		"verbatimModuleSyntax": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
 		"target": "es2022"
-	}
+	},
+	"include": ["src/**/*"],
+	"exclude": ["node_modules/*", "build/*"]
 }
