--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,6 +16,6 @@
 		"strict": true,
 		"target": "es2022"
 	},
-	"include": ["src/**/*"],
+	"include": ["src/**/*", "./svelte.config.js", "./vite.config.js"],
 	"exclude": ["node_modules/*", "build/*"]
 }
