--- a/package.json
+++ b/package.json
@@ -12,36 +12,35 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
-	"peerDependencies": {
-		"postcss": "^8.4.38"
-	},
 	"devDependencies": {
 		"@catppuccin/highlightjs": "^0.1.4",
 		"@fullhuman/postcss-purgecss": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/enhanced-img": "^0.1.9",
-		"@sveltejs/kit": "^2.5.9",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@sveltejs/kit": "^2.5.10",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-markdown": "^3.0.1",
 		"eslint-plugin-svelte": "^2.39.0",
 		"highlight.js": "^11.9.0",
 		"html-minifier-terser": "^7.2.0",
+		"postcss": "^8.4.38",
 		"postcss-combine-duplicated-selectors": "^10.0.3",
-		"postcss-preset-env": "^9.5.13",
+		"postcss-preset-env": "^9.5.14",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"sass": "^1.77.2",
+		"sass": "^1.77.4",
+		"sk-seo": "^0.2.7",
 		"super-sitemap": "^0.14.14",
 		"svelte": "^4.2.17",
-		"svelte-check": "^3.7.1",
+		"svelte-check": "^3.8.0",
 		"svelte-eslint-parser": "^0.33.1",
 		"svelte-markdoc-preprocess": "^1.2.1",
-		"vite": "^5.2.11"
+		"vite": "^5.2.12"
 	},
 	"engines": {
 		"node": ">=21.5"
 	},
-	"packageManager": "pnpm@9.1.2+sha256.19c17528f9ca20bd442e4ca42f00f1b9808a9cb419383cd04ba32ef19322aba7"
+	"packageManager": "pnpm@9.1.4+sha256.30a1801ac4e723779efed13a21f4c39f9eb6c9fbb4ced101bce06b422593d7c9"
 }
