--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/enhanced-img": "^0.1.9",
 		"@sveltejs/kit": "^2.5.10",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"cssnano": "^7.0.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-markdown": "^3.0.1",
