--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"importsNotUsedAsValues": "remove",
 		"target": "es2022"
 	},
 	"include": ["src/**/*", "./svelte.config.js", "./vite.config.js"],
