--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "prettier  --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@catppuccin/highlightjs": "^0.1.4",
@@ -19,18 +19,18 @@
 		"@sveltejs/enhanced-img": "^0.1.9",
 		"@sveltejs/kit": "^2.5.10",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/node": "^20.14.1",
 		"cssnano": "^7.0.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-markdown": "^3.0.1",
 		"eslint-plugin-svelte": "^2.39.0",
 		"highlight.js": "^11.9.0",
 		"html-minifier-terser": "^7.2.0",
 		"postcss": "^8.4.38",
 		"postcss-combine-duplicated-selectors": "^10.0.3",
 		"postcss-preset-env": "^9.5.14",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.0",
 		"sass": "^1.77.4",
 		"sk-seo": "^0.2.7",
 		"super-sitemap": "^0.14.14",
