--- a/.github/workflows/cloudflare-deploy.yaml
+++ b/.github/workflows/cloudflare-deploy.yaml
@@ -1,10 +1,9 @@
 name: Deploy to Cloudflare
 
 on:
-  workflow_dispatch
-  # on:
-  # push:
-  # branches: 'main'
+  workflow_dispatch:
+  push:
+    branches: 'main'
 
 jobs:
   build_site:
@@ -20,12 +19,12 @@ jobs:
       - name: ⚙️ Install node
         uses: actions/setup-node@v4
         with:
-          node-version: '21.x'
+          node-version: '22.x'
 
       - name: ✨ Enable corepack with pnpm
         run: |
           corepack enable
-          corepack use pnpm@8.x
+          corepack use pnpm@9.x
 
       - name: 🔍 Get pnpm store directory
         run: |
