--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@catppuccin/highlightjs": "^0.2.2",
+		"@eslint/eslintrc": "^3.2.0",
 		"@fullhuman/postcss-purgecss": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/enhanced-img": "^0.3.0",
@@ -24,6 +25,7 @@
 		"eslint": "^9.6.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.41.0",
+		"globals": "^15.14.0",
 		"highlight.js": "^11.10.0",
 		"html-minifier-terser": "^7.2.0",
 		"postcss": "^8.4.39",
